--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
+                        bgbutton: '#A4BC46'
                     }
                 }
             }
@@ -24,9 +25,9 @@
 </head>
 
 <body>
-    <header>
+    <header class="bg-yellow-50">
         <!-- navigation part start -->
-        <nav class="flex justify-between mx-16 my-8">
+        <nav class="flex justify-between mx-20 pt-8">
             <div class="flex justify-center items-center">
                 <img class="h-20 w-96" src="icons/Group 33072.png" alt="">
 
@@ -41,7 +42,28 @@
         </nav>
         <!-- navigation part end  -->
         <!-- banner section start -->
-        <section>
+        <section class="flex justify-around">
+
+            <div class="flex flex-col justify-center items-center">
+                <div>
+                    <h1 class="mb-4 text-3xl font-black">
+                        <span class="text-orange-300">Be the Penguins</span> <br>
+                        of Winter
+                    </h1>
+                    <p class="mb-4">Lorem Ipsum is simply dummy text of the printing
+                        and typesetting industry.</p>
+                    <h1 class="bg-green-400 flex w-40 rounded-md p-4 h-16 w-40">
+                        <img class="flex justify-center items-center  mx-4" src="icons/shopping-cart 1.png" alt="">
+                        <span class="flex justify-center items-center">
+                            Buy Now
+                        </span>
+                    </h1>
+                </div>
+            </div>
+            <div>
+                <img src="images/model.png" alt="">
+
+            </div>
 
         </section>
         <!-- banner section end  -->
