--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <header class="bg-yellow-50">
         <!-- navigation part start -->
-        <nav class="flex justify-between mx-20 pt-8">
+        <nav class="flex justify-between pt-8 mx-20">
             <div class="flex justify-center items-center">
                 <img class="h-20 w-96" src="icons/Group 33072.png" alt="">
 
@@ -42,7 +42,7 @@
         </nav>
         <!-- navigation part end  -->
         <!-- banner section start -->
-        <section class="flex justify-around">
+        <section class="flex justify-between pb-16 mx-20">
 
             <div class="flex flex-col justify-center items-center">
                 <div>
@@ -68,6 +68,115 @@
         </section>
         <!-- banner section end  -->
     </header>
+    <!-- main part start-->
+    <main class="">
+        <!-- women's jacket start  -->
+        <section class="mb-8">
+            <h1 class="uppercase text-black my-16 text-4xl font-extrabold mx-20">Women Jacket</h1>
+            <div class="flex mx-16">
+                <!-- jacket 1 -->
+                <div class="shadow-lg mx-4 rounded-lg">
+                    <div class="p-16">
+                        <!-- image section  -->
+                        <div class="bg-slate-200 p-8 rounded-2xl">
+                            <img src="images/jacket-1.png" alt="">
+                        </div>
+
+                        <h1 class="my-2 text-3xl font-extrabold">Yellow Coat Jacket</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, nobis.
+                        </p>
+
+                        <div class="flex justify-between items-center">
+                            <h1 class="text-4xl">$234</h1>
+                            <!-- creating a button  -->
+                            <h1 class="bg-green-400 flex w-40 rounded-md p-4 h-16 w-40">
+                                <img class="flex justify-center items-center  mx-4" src="icons/shopping-cart 1.png"
+                                    alt="">
+                                <span class="flex justify-center items-center">
+                                    Buy Now
+                                </span>
+                            </h1>
+
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- jacket-2  -->
+                <div class="shadow-lg mx-4 rounded-lg">
+                    <div class="p-16">
+                        <!-- image section  -->
+                        <div>
+                            <img class="bg-slate-200 p-8 rounded-2xl" src="images/jacket-2.png" alt="">
+                        </div>
+
+                        <h1 class="my-2 text-3xl font-extrabold">Yellow Coat Jacket</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, nobis.
+                        </p>
+
+                        <div class="flex justify-between items-center">
+                            <h1 class="text-4xl">$234</h1>
+                            <!-- creating a button  -->
+                            <h1 class="bg-green-400 flex w-40 rounded-md p-4 h-16 w-40">
+                                <img class="flex justify-center items-center  mx-4" src="icons/shopping-cart 1.png"
+                                    alt="">
+                                <span class="flex justify-center items-center">
+                                    Buy Now
+                                </span>
+                            </h1>
+
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- jacket-3  -->
+                <div class="shadow-lg mx-4 rounded-lg">
+                    <div class="p-16">
+                        <!-- image section  -->
+                        <div>
+                            <img class="bg-slate-200 p-8 rounded-2xl" src="images/jacket-3.png" alt="">
+                        </div>
+
+                        <h1 class="my-2 text-3xl font-extrabold">Yellow Coat Jacket</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, nobis.
+                        </p>
+
+                        <div class="flex justify-between items-center">
+                            <h1 class="text-4xl">$234</h1>
+                            <!-- creating a button  -->
+                            <h1 class="bg-green-400 flex w-40 rounded-md p-4 h-16 w-40">
+                                <img class="flex justify-center items-center  mx-4" src="icons/shopping-cart 1.png"
+                                    alt="">
+                                <span class="flex justify-center items-center">
+                                    Buy Now
+                                </span>
+                            </h1>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
+        <!-- women's jacket end  -->
+
+        <!-- men's jacket start  -->
+
+        <section>
+
+        </section>
+        <!-- men's jacket end  -->
+
+
+    </main>
+    <!-- main part end  -->
+
 
 </body>
 
