men's jacket part done

--- a/index.html
+++ b/index.html
@@ -167,10 +167,101 @@
         <!-- women's jacket end  -->
 
         <!-- men's jacket start  -->
+        <section class="mb-8">
+            <h1 class="uppercase text-black my-16 text-4xl font-extrabold mx-20">Men Jacket</h1>
+            <div class="flex mx-16">
+                <!-- jacket 4 -->
+                <div class="shadow-lg mx-4 rounded-lg">
+                    <div class="p-16">
+                        <!-- image section  -->
+                        <div class="bg-slate-200 p-8 rounded-2xl">
+                            <img src="images/jacket-4.png" alt="">
+                        </div>
 
-        <section>
+                        <h1 class="my-2 text-3xl font-extrabold">Yellow Coat Jacket</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, nobis.
+                        </p>
+
+                        <div class="flex justify-between items-center">
+                            <h1 class="text-4xl">$234</h1>
+                            <!-- creating a button  -->
+                            <h1 class="bg-green-400 flex w-40 rounded-md p-4 h-16 w-40">
+                                <img class="flex justify-center items-center  mx-4" src="icons/shopping-cart 1.png"
+                                    alt="">
+                                <span class="flex justify-center items-center">
+                                    Buy Now
+                                </span>
+                            </h1>
+
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- jacket-5  -->
+                <div class="shadow-lg mx-4 rounded-lg">
+                    <div class="p-16">
+                        <!-- image section  -->
+                        <div>
+                            <img class="bg-slate-200 p-8 rounded-2xl" src="images/jacket-5.png" alt="">
+                        </div>
+
+                        <h1 class="my-2 text-3xl font-extrabold">Yellow Coat Jacket</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, nobis.
+                        </p>
+
+                        <div class="flex justify-between items-center">
+                            <h1 class="text-4xl">$234</h1>
+                            <!-- creating a button  -->
+                            <h1 class="bg-green-400 flex w-40 rounded-md p-4 h-16 w-40">
+                                <img class="flex justify-center items-center  mx-4" src="icons/shopping-cart 1.png"
+                                    alt="">
+                                <span class="flex justify-center items-center">
+                                    Buy Now
+                                </span>
+                            </h1>
+
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- jacket-6  -->
+                <div class="shadow-lg mx-4 rounded-lg">
+                    <div class="p-16">
+                        <!-- image section  -->
+                        <div>
+                            <img class="bg-slate-200 p-8 rounded-2xl" src="images/jacket-6.png" alt="">
+                        </div>
+
+                        <h1 class="my-2 text-3xl font-extrabold">Yellow Coat Jacket</h1>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, nobis.
+                        </p>
+
+                        <div class="flex justify-between items-center">
+                            <h1 class="text-4xl">$234</h1>
+                            <!-- creating a button  -->
+                            <h1 class="bg-green-400 flex w-40 rounded-md p-4 h-16 w-40">
+                                <img class="flex justify-center items-center  mx-4" src="icons/shopping-cart 1.png"
+                                    alt="">
+                                <span class="flex justify-center items-center">
+                                    Buy Now
+                                </span>
+                            </h1>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
 
         </section>
+
+
         <!-- men's jacket end  -->
 
 
