bottom part done

--- a/index.html
+++ b/index.html
@@ -264,9 +264,56 @@
 
         <!-- men's jacket end  -->
 
+        <!-- bottom part start  -->
+        <section class="mx-20 mb-20">
+            <div class="grid grid-cols-2 gap-6">
+                <div class="shadow-xl h-32 flex items-center rounded-2xl">
+                    <div>
+                        <img class="h-16 w-24 mx-8" src="icons/image 12.png" alt="">
+
+                    </div>
+                    <div>
+                        <h1 class="text-3xl font-bold">Find the Perfect Fit
+                        </h1>
+                        <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class=" row-span-3">
+                    <div class="flex justify-center items-center">
+                        <img src="images/shopping.png" alt="">
+                    </div>
+                </div>
+                <div class="shadow-xl h-32 flex items-center rounded-2xl">
+                    <div>
+                        <img class="h-16 w-24 mx-8" src="icons/image 13.png" alt="">
+                    </div>
+                    <div>
+                        <h1 class="text-3xl font-bold">Find the Perfect Fit
+                        </h1>
+                        <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="shadow-xl h-32 flex items-center rounded-2xl">
+                    <div>
+                        <img class="h-16 w-24 mx-8" src="icons/image 14.png" alt="">
+
+                    </div>
+                    <div>
+                        <h1 class="text-3xl font-bold">Find the Perfect Fit
+                        </h1>
+                        <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!-- bottom parnt end  -->
+
 
     </main>
     <!-- main part end  -->
+
+
 
 
 </body>
